Ensure the branch name is always a string

--- a/backend/libraries/libraries.yaml
+++ b/backend/libraries/libraries.yaml
@@ -2,7 +2,7 @@ directx:
   '5.0':
     git:
       url: https://github.com/roblabla/directx-headers
-      branch: 5.0
+      branch: '5.0'
   '8.0':
     git:
       url: https://github.com/roblabla/directx-headers
