--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,12 +15,12 @@ services:
       args:
         ENABLE_GBA_SUPPORT: "YES"
         ENABLE_N64_SUPPORT: "YES"
+        ENABLE_PS1_SUPPORT: "YES"
         # dont install wine32 etc by default
         ENABLE_GC_WII_SUPPORT: "NO"
         ENABLE_MSDOS_SUPPORT: "NO"
         ENABLE_N3DS_SUPPORT: "NO"
         ENABLE_NDS_ARM9_SUPPORT: "NO"
-        ENABLE_PS1_SUPPORT: "NO"
         ENABLE_PS2_SUPPORT: "NO"
         ENABLE_WIN9X_SUPPORT: "NO"
         # dont install clang by default
