Use wibo for GC_WII platform

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -65,14 +65,13 @@ COPY --from=nsjail /nsjail/nsjail /bin/nsjail
 COPY --from=ghcr.io/decompals/wibo:0.6.4 /usr/local/sbin/wibo /usr/bin/
 
 # windows compilers need i386 wine
-ARG ENABLE_GC_WII_SUPPORT
+
 ARG ENABLE_MSDOS_SUPPORT
 ARG ENABLE_NDS_ARM9_SUPPORT
 ARG ENABLE_N3DS_SUPPORT
 ARG ENABLE_PS2_SUPPORT
 ARG ENABLE_WIN9X_SUPPORT
-RUN if [ "${ENABLE_GC_WII_SUPPORT}" = "YES" ] || \
-       [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
+RUN if [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_N3DS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_NDS_ARM9_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_PS2_SUPPORT}" = "YES" ] || \
@@ -120,8 +119,7 @@ RUN useradd --create-home user \
 USER user
 
 # initialize wine files to /home/user/.wine
-RUN if [ "${ENABLE_GC_WII_SUPPORT}" = "YES" ] || \
-       [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
+RUN if [ "${ENABLE_MSDOS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_N3DS_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_NDS_ARM9_SUPPORT}" = "YES" ] || \
        [ "${ENABLE_PS2_SUPPORT}" = "YES" ] || \
@@ -133,6 +131,7 @@ ENV PATH="$PATH:/etc/poetry/bin"
 
 # no special dependencies required for these platforms
 ARG ENABLE_GBA_SUPPORT
+ARG ENABLE_GC_WII_SUPPORT
 ARG ENABLE_MACOSX_SUPPORT
 ARG ENABLE_N64_SUPPORT
 ARG ENABLE_PS1_SUPPORT
