--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
         ENABLE_GBA_SUPPORT: "YES"
         ENABLE_N64_SUPPORT: "YES"
         ENABLE_PS1_SUPPORT: "YES"
+        ENABLE_GC_WII_SUPPORT: "YES"
         # dont install wine32 etc by default
-        ENABLE_GC_WII_SUPPORT: "NO"
         ENABLE_MSDOS_SUPPORT: "NO"
         ENABLE_N3DS_SUPPORT: "NO"
         ENABLE_NDS_ARM9_SUPPORT: "NO"
