--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
         "is-dark-color": "^1.2.0",
         "next": "^13.3.4",
         "next-plausible": "^3.7.2",
+        "next-pwa": "^5.6.0",
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
         "react-contenteditable": "^3.3.6",
