--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,10 +17,10 @@ services:
         ENABLE_GC_WII_SUPPORT: "YES"
         ENABLE_N3DS_SUPPORT: "YES"
         ENABLE_N64_SUPPORT: "YES"
+        ENABLE_NDS_ARM9_SUPPORT: "YES"
         ENABLE_PS1_SUPPORT: "YES"
         # dont install wine32 etc by default
         ENABLE_MSDOS_SUPPORT: "NO"
-        ENABLE_NDS_ARM9_SUPPORT: "NO"
         ENABLE_PS2_SUPPORT: "NO"
         ENABLE_WIN9X_SUPPORT: "NO"
         # dont install clang by default
