--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,9 +64,10 @@ jobs:
           version: 1.0
       - name: Install DOSEMU
         run: |-
+          sudo add-apt-repository -y ppa:stsp-0/dj64
           sudo add-apt-repository -y ppa:dosemu2/ppa
           sudo apt-get update
-          sudo apt-get install -y dosemu2
+          sudo apt-get install -y dj64 dosemu2
       - name: Install nsjail
         run: |-
           git clone --recursive --branch=3.1 https://github.com/google/nsjail
