--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -66,8 +66,9 @@ COPY --from=nsjail /nsjail/nsjail /bin/nsjail
 COPY --from=ghcr.io/decompals/wibo:0.6.12 /usr/local/sbin/wibo /usr/bin/
 
 RUN add-apt-repository -y ppa:dosemu2/ppa && \
+    add-apt-repository -y ppa:stsp-0/dj64 && \
     apt-get update && \
-    apt-get install -y dosemu2
+    apt-get install -y dosemu2 dj64
 
 # windows compilers need i386 wine
 
