--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
       POSTGRES_USER: decompme
       POSTGRES_PASSWORD: decompme
     ports:
-    - "5432:5432"
+      - "5432:5432"
     volumes:
-    - ./postgres:/var/lib/postgresql/data
+      - ./postgres:/var/lib/postgresql/data
   backend:
     build:
       context: backend
@@ -45,6 +45,8 @@ services:
     volumes:
       - ./backend:/backend
     tmpfs:
+      # explicitly mount /dev/shm with exec as dosemu2 requires exec privilege
+      - /dev/shm:exec,uid=1000,gid=1000,size=64M,mode=0700
       # Use a separate tmpfs to prevent a rogue jailed process
       # from filling /tmp on the parent container
       - /sandbox/tmp:exec,uid=1000,gid=1000,size=64M,mode=0700
