Fix spelling mistake

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -40,7 +40,7 @@ RUN apt-get -y update && apt-get install -y \
     binutils-mips-linux-gnu \
     binutils-powerpc-linux-gnu \
     binutils-sh-elf \
-    bintuils-mingw-w64-i686 \
+    binutils-mingw-w64-i686 \
     ca-certificates \
     curl \
     dos2unix \
