--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,8 @@ jobs:
       - name: Install GC/Wii binutils
         run: |-
           curl -sSL https://github.com/encounter/gc-wii-binutils/releases/download/2.42-1/linux-`uname -m`.zip | \
-            bsdtar -xvf- -C /usr/bin
-          chmod +x /usr/bin/powerpc-eabi-*
+            sudo bsdtar -xvf- -C /usr/bin
+          sudo chmod +x /usr/bin/powerpc-eabi-*
       - name: Cache compilers
         uses: actions/cache@v4
         with:
