--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,7 @@
         "autoprefixer": "^10.4.18",
         "css-loader": "^6.10.0",
         "cssnano": "^6.1.0",
-        "eslint": "^8.57.0",
+        "eslint": "^8.39.0",
         "eslint-config-next": "^14.1.3",
         "eslint-formatter-rdjson": "^1.0.6",
         "eslint-plugin-css-modules": "^2.12.0",
@@ -90,6 +90,9 @@
         "typescript": "^5.4.2",
         "umd-compat-loader": "^2.1.2",
         "webpack": "^5.90.3"
+    },
+    "resolutions": {
+        "string-width": "4.2.3"
     },
     "browserslist": [
         "last 2 versions and not dead and >= 1% and supports async-functions"
