--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "@radix-ui/colors": "^0.1.8",
         "@react-hook/resize-observer": "^1.2.6",
         "@replit/codemirror-indentation-markers": "^6.4.2",
+        "@replit/codemirror-vim": "^6.2.0",
         "allotment": "^1.19.0",
         "ansi-to-react": "^6.1.6",
         "classnames": "^2.3.2",
