Correct mislabeled mwcps2 compilers

--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -120,9 +120,9 @@ ps2:
   - ee-gcc2.96
   - ee-gcc3.2-040921
   - mwcps2-2.3-991202
-  - mwcps2-3.0b22-011126
-  - mwcps2-3.0b22-020123
-  - mwcps2-3.0b22-020716
+  - mwcps2-3.0-011126
+  - mwcps2-3.0.1-020123
+  - mwcps2-3.0.3-020716
   - mwcps2-3.0b22-020926
 
 psp:
