Add instructions for connecting to decomp.me on docker from another device

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,9 +53,8 @@ services:
   frontend:
     build: frontend
     environment:
-      API_BASE: http://localhost/api
+      API_BASE: /api
       INTERNAL_API_BASE: http://backend:8000/api
-      FRONTEND_USE_IMAGE_PROXY: "off"
     ports:
       - "8080:8080"
     volumes:
