Roll our own cpp LRLanguage
This fixes a bug when using a coding style with braces on a new line. Previously, it was inconsistent whether braces were indented (GNU style) or not (Allman style). This commit standardizes on Allman style.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
         "@clangd-wasm/clangd-wasm": "15.0.7-dev5",
         "@codemirror/autocomplete": "^6.15.0",
         "@codemirror/commands": "^6.3.3",
-        "@codemirror/lang-cpp": "^6.0.2",
         "@codemirror/language": "^6.10.1",
         "@codemirror/lint": "^6.5.0",
         "@codemirror/search": "^6.5.6",
@@ -21,6 +20,7 @@
         "@codemirror/view": "^6.26.0",
         "@ducanh2912/next-pwa": "^10.2.5",
         "@lezer/common": "^1.2.1",
+        "@lezer/cpp": "^1.0.0",
         "@lezer/highlight": "^1.2.0",
         "@open-rpc/client-js": "^1.8.1",
         "@primer/octicons-react": "^19.9.0",
