--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,44 +12,13 @@ services:
   backend:
     build:
       context: backend
-      args:
-        ENABLE_GBA_SUPPORT: "YES"
-        ENABLE_GC_WII_SUPPORT: "YES"
-        ENABLE_N3DS_SUPPORT: "YES"
-        ENABLE_N64_SUPPORT: "YES"
-        ENABLE_NDS_ARM9_SUPPORT: "YES"
-        ENABLE_PS1_SUPPORT: "YES"
-        # dont install wine32 etc by default
-        ENABLE_MSDOS_SUPPORT: "NO"
-        ENABLE_PS2_SUPPORT: "NO"
-        ENABLE_WIN32_SUPPORT: "NO"
-        # dont install clang by default
-        ENABLE_SWITCH_SUPPORT: "NO"
-        # dont install dosemu by default
-        ENABLE_SATURN_SUPPORT: "NO"
-        # dont download macosx compilers by default
-        ENABLE_MACOSX_SUPPORT: "NO"
-    cap_drop:
-      - all
-    cap_add:
-      - setuid
-      - setgid
-      - setfcap
     env_file:
       - backend/docker.dev.env
     ports:
       - "8000:8000"
-    security_opt:
-      - apparmor=unconfined
-      - seccomp=unconfined
     volumes:
       - ./backend:/backend
-    tmpfs:
-      # explicitly mount /dev/shm with exec as dosemu2 requires exec privilege
-      - /dev/shm:exec,uid=1000,gid=1000,size=64M,mode=0700
-      # Use a separate tmpfs to prevent a rogue jailed process
-      # from filling /tmp on the parent container
-      - /sandbox/tmp:exec,uid=1000,gid=1000,size=64M,mode=0700
+
   frontend:
     build: frontend
     environment:
@@ -67,3 +36,135 @@ services:
     volumes:
       - ./nginx:/etc/nginx/conf.d
       - ./backend/media:/media
+
+  # platforms
+  gba:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/gba.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "gba"
+    ports:
+      - "9001:9000"
+  gc_wii:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/gc_wii.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "gc_wii"
+    ports:
+      - "9002:9000"
+  macosx:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/macosx.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "macosx"
+    ports:
+      - "9003:9000"
+  msdos:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/msdos.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "msdos"
+    ports:
+      - "9004:9000"
+  n3ds:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/n3ds.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "n3ds"
+    ports:
+      - "9005:9000"
+  n64:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/n64.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "n64,irix"
+    ports:
+      - "9006:9000"
+  nds_arm9:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/nds_arm9.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "nds_arm9"
+    ports:
+      - "9007:9000"
+  ps1:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/ps1.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "ps1"
+    ports:
+      - "9008:9000"
+  ps2:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/ps2.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "ps2"
+    ports:
+      - "9009:9000"
+  psp:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/psp.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "psp"
+    ports:
+      - "9010:9000"
+  saturn:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/saturn.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "saturn"
+    ports:
+      - "9011:9000"
+  switch:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/switch.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "switch"
+    ports:
+      - "9012:9000"
+  win32:
+    extends:
+      file: platform.yaml
+      service: platform
+    build:
+      dockerfile: ./docker/win32.Dockerfile
+      args:
+        SUPPORTED_PLATFORMS: "win32"
+    ports:
+      - "9013:9000"
