--- a/backend/libraries/libraries.yaml
+++ b/backend/libraries/libraries.yaml
@@ -1,9 +1,10 @@
-directx:
-  '5.0':
-    git:
-      url: https://github.com/roblabla/directx-headers
-      branch: '5.0'
-  '8.0':
-    git:
-      url: https://github.com/roblabla/directx-headers
-      branch: main
+win32:
+  directx:
+    '5.0':
+      git:
+        url: https://github.com/roblabla/directx-headers
+        branch: '5.0'
+    '8.0':
+      git:
+        url: https://github.com/roblabla/directx-headers
+        branch: main
