--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -128,6 +128,8 @@ ps2:
 psp:
   - pspsnc_1.2.7503.0
   - mwccpsp_3.0.1_121
+  - mwccpsp_3.0.1_134
+  - mwccpsp_3.0.1_139
   - mwccpsp_3.0.1_147
   - mwccpsp_3.0.1_151
 
