--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -132,6 +132,12 @@ psp:
   - mwccpsp_3.0.1_139
   - mwccpsp_3.0.1_147
   - mwccpsp_3.0.1_151
+  - mwccpsp_3.0.1_180
+  - mwccpsp_3.0.1_192
+  - mwccpsp_3.0.1_201
+  - mwccpsp_3.0.1_205
+  - mwccpsp_3.0.1_210
+  - mwccpsp_3.0.1_219
   - psp-gcc-1.3.1
 
 saturn:
