Adding more MWCCPS2 compilers

--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -124,6 +124,16 @@ ps2:
   - mwcps2-3.0.1-020123
   - mwcps2-3.0.3-020716
   - mwcps2-3.0b22-020926
+  - mwcps2-3.0b52-030722
+  - mwcps2-3.0.1b74-030811
+  - mwcps2-3.0.1b87-031208
+  - mwcps2-3.0.1b95-040309
+  - mwcps2-3.0.1b119-040914
+  - mwcps2-3.0.1b145-050209
+  - mwcps2-3.0.1b151-050317
+  - mwcps2-3.0.1b198-051011
+  - mwcps2-3.0.1b205-051227
+  - mwcps2-3.0.1b210-060308
 
 psp:
   - pspsnc_1.2.7503.0
