--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -135,6 +135,7 @@ ps2:
   - mwcps2-3.0b50-030527
   - mwcps2-3.0b52-030722
   - mwcps2-3.0.1b44-030325
+  - mwcps2-3.0.1b51-030512
   - mwcps2-3.0.1b74-030811
   - mwcps2-3.0.1b75-030916
   - mwcps2-3.0.1b87-031208
