--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -127,6 +127,8 @@ ps2:
   - ee-gcc2.96
   - ee-gcc3.2-040921
   - mwcps2-2.3-991202
+  - mwcps2-2.3.3-000906
+  - mwcps2-2.4-001213
   - mwcps2-3.0-011126
   - mwcps2-3.0.1-020123
   - mwcps2-3.0.3-020716
